--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,6 @@ p{
     color: white;
 }
 
-/* body{
-    background: #FFB30F;
-} */
-
 .backgroundVerde{
     background: #2f9e41;
 }
@@ -113,7 +109,7 @@ p{
 }
 
 .divBotoes{
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 .retorno{
@@ -128,3 +124,34 @@ p{
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
+}
+
+.padding0{
+    padding: 0;
+    margin: 10px
+}
+
+.marginBtn{
+    margin: 5px
+}
+
+a:link, a:visited {
+    text-decoration: none;
+    color: rgb(255, 255, 255)
+	}
+a:hover {
+	text-decoration: underline; 
+	color: black
+	}
+a:active {
+    color: black;
+	text-decoration: none
+    }
+    
+.redefinirSenha{
+    color: white
+}
+
+.labelInformativo{
+    margin: 15px
+}
