--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,15 @@ p{
     transform: translate(-50%, -50%) 
 }
 
+.logoAdm{
+    margin: 0;
+    position: absolute;
+    top: -25%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+}
+
 .logo2{
     margin: 0;
     position: absolute;
@@ -63,7 +72,7 @@ p{
 .logo3{
     margin: 0;
     position: absolute;
-    margin-top: 50%;
+    margin-top: 25%;
     top: 25%;
     left: 50%;
     margin-right: -50%;
@@ -159,7 +168,7 @@ a:active {
 .formatText{
     margin: 0;
     position: absolute;
-    margin-top: 80%;
+    margin-top: 60%;
     top: 25%;
     left: 50%;
     margin-right: -50%;
@@ -170,7 +179,7 @@ a:active {
 .formatText2{
     margin: 0;
     position: absolute;
-    margin-top: 85%;
+    margin-top: 65%;
     top: 25%;
     left: 50%;
     margin-right: -50%;
