--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,7 +118,7 @@ p{
 }
 
 .divBotoes{
-    margin-top: 250px;
+    margin-top: 60%;
 }
 
 .retorno{
@@ -129,7 +129,7 @@ p{
     margin: 0;
     position: absolute;
     margin-top: 5%;
-    top: 25%;
+    top: 15%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
